--- a/public/index.html
+++ b/public/index.html
@@ -44,9 +44,19 @@
       </div>
 
       <div class="container__btns">
-        <button class="btn start">Start</button>
+        <button class="button start" style="vertical-align: middle">
+          <span>Start</span>
+        </button>
+        <button class="button pause" style="vertical-align: middle">
+          <span>Pause </span>
+        </button>
+        <button class="button reset" style="vertical-align: middle">
+          <span>Reset</span>
+        </button>
+
+        <!-- <button class="btn start">Start</button>
         <button class="btn stop">Pause</button>
-        <button class="btn reset">Reset</button>
+        <button class="btn reset">Reset</button> -->
       </div>
     </div>
     <script src="./script.js"></script>
